Reorganized scss files

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,7 +3,7 @@
 @import 'colors';
 @import 'easing';
 @import 'bootstrap-overrides';
-@import 'components/progress-chart';
+@import 'progress.chart';
 
 .bold {
 	font-family: 'OpenSans-Bold'
