Add mobile menu

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,7 +3,8 @@
 @import 'colors';
 @import 'easing';
 @import 'bootstrap-overrides';
-@import 'progress.chart';
+@import 'progress-chart';
+@import 'responsive';
 
 .bold {
 	font-family: 'OpenSans-Bold'
